--- a/SDZ_custom/user.css
+++ b/SDZ_custom/user.css
@@ -263,4 +263,8 @@
     background: rgb(30 30 30 / var(--tw-bg-opacity));
 }
 
+.dark .gr-compact {
+    background-color: rgb(40 40 40 / var(--tw-bg-opacity)) !important;
+}
+
 
