--- a/SDZ_custom/user.css
+++ b/SDZ_custom/user.css
@@ -56,6 +56,7 @@
 
 .dark .dark\:border-gray-700 {
     --tw-border-opacity: 0;
+    padding-top: 1.5%;
     border-color: rgb(60 60 60 / var(--tw-border-opacity));
 }
 
