--- a/SDZ_custom/user.css
+++ b/SDZ_custom/user.css
@@ -267,4 +267,13 @@
     background-color: rgb(40 40 40 / var(--tw-bg-opacity)) !important;
 }
 
+.dark fieldset span.text-gray-500, .dark .gr-block.gr-box span.text-gray-500, .dark label.block span {
+box-shadow: 6px 0 6px 0px rgb(28 28 28 / 0%), -6px 0 6px 0px rgb(28 28 28 / 0%) !important;
+}
+
+.gallery-item.svelte-1g9btlg.svelte-1g9btlg:hover {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) rgb(0 117 255) !important;
+}
+
 
