--- a/SDZ_custom/user.css
+++ b/SDZ_custom/user.css
@@ -276,4 +276,20 @@ box-shadow: 6px 0 6px 0px rgb(28 28 28 / 0%), -6px 0 6px 0px rgb(28 28 28 / 0%) 
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) rgb(0 117 255) !important;
 }
 
+#quicksettings > div, #quicksettings > fieldset {
+    max-width: 26em !important;
+    min-width: 26em !important;
+    padding: 1em !important;
+    border: none;
+    box-shadow: none;
+    background: none;
+}
+
+
+#quicksettings {
+    padding-bottom: 1em !important;
+    gap: 0.4em;
+}
+
+
 
