--- a/SDZ_custom/user.css
+++ b/SDZ_custom/user.css
@@ -264,7 +264,7 @@
 }
 
 .dark .gr-compact {
-    background-color: rgb(40 40 40 / var(--tw-bg-opacity)) !important;
+    background-color: rgb(40 40 40 / var(--tw-bg-opacity));
 }
 
 .dark fieldset span.text-gray-500, .dark .gr-block.gr-box span.text-gray-500, .dark label.block span {
