--- a/SDZ_custom/user2.css
+++ b/SDZ_custom/user2.css
@@ -190,12 +190,6 @@ div.svelte-10ogue4>*:first-child {
     background-color: #242424 !important;
 }
 
-.dark .gradio-container *, .dark .gr-compact *, .dark .rounded-t-lg, .dark .tabitem *, .dark .flex-wrap *, .dark .svelte-10ogue4 > .flex-col {
-    border-radius: calc(0.25px *var(--UI_radius)) !important;
-    background-color: #242424 !important;
-}
-
-
 
 
 
@@ -343,7 +337,7 @@ div.svelte-10ogue4>*:first-child {
 .dark .bg-gray-200.\!text-gray-700,
 #txt2img_toprow,
 #txt2img_gallery_container .livePreview {
-  background-color: #242424 !important;
+  background-color: transparent !important;
 }
 
 /* Galleries */
