--- a/SDZ_custom/ComfyUI_style.css
+++ b/SDZ_custom/ComfyUI_style.css
@@ -35,22 +35,23 @@ body {
 }
 
 .comfy-modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 100; /* Sit on top */
-	padding: 30px 30px 10px 30px;
-	background-color: #ff0000; /* Modal background */
-	box-shadow: 0px 0px 20px #888888;
-	border-radius: 10px;
-	text-align: center;
-	top: 50%;
-	left: 50%;
-	max-width: 80vw;
-	max-height: 80vh;
-	transform: translate(-50%, -50%);
-	overflow: hidden;
-	min-width: 60%;
-	justify-content: center;
+       opacity: 0;
+       display: none;
+       position: fixed;
+       z-index: 100;
+       padding: 10px 20px 10px 20px;
+       background-color: #00fffa12;
+       box-shadow: 0px 0px 20px #88888800;
+       border-radius: 5px;
+       text-align: center;
+       top: 50%;
+       left: 50%;
+       max-width: 80vw;
+       max-height: 80vh;
+       transform: translate(-50%, -50%);
+       overflow: hidden;
+       min-width: 0%;
+       justify-content: center;
 }
 
 .comfy-modal-content {
