--- a/SDZ_custom/ComfyUI_style.css
+++ b/SDZ_custom/ComfyUI_style.css
@@ -88,8 +88,8 @@ body {
   width: 200px;
   font-size: 15px;
   position: absolute;
-  top: 50%;
-  right: 0%;
+  bottom: 0%;
+  left: 0%;
   background-color: #333333;
   color: #818181;
   text-align: center;
