--- a/SDZ_custom/ComfyUI_style.css
+++ b/SDZ_custom/ComfyUI_style.css
@@ -89,7 +89,7 @@ body {
   font-size: 15px;
   position: absolute;
   bottom: 0%;
-  left: 0%;
+  right: 0%;
   background-color: #333333;
   color: #818181;
   text-align: center;
