--- a/SDZ_custom/user3.css
+++ b/SDZ_custom/user3.css
@@ -56,12 +56,12 @@
     content: '' !important;
     display: block;
     background: none !important;
-    /* width: 129px !important; */
-    /* height: 26px !important; */
-    /* z-index: 1000 !important; */
-    /* margin-right: 36px !important; */
-    /* margin-left: 16px !important; */
-    /* margin-top: 12px !important; */
+    width: 0px !important; */
+    height: 0px !important; */
+    z-index: 1000 !important; */
+    margin-right: 0px !important; */
+    margin-left: 0px !important; */
+    margin-top: 0px !important; */
 }
 
 
