--- a/SDZ_custom/user4.css
+++ b/SDZ_custom/user4.css
@@ -132,4 +132,23 @@ button.svelte-1g805jl {
     color: #2a2a2a;
 }
 
+.dark .progressDiv {
+    background: #3a3a3a;
+}
+
+.progressDiv .progress {
+    width: 0%;
+    height: 20px;
+    background: #00ffcc;
+    color: #2a2a2a;
+    font-weight: bold;
+    line-height: 20px;
+    padding: 0 8px 0 0;
+    text-align: right;
+    border-radius: 3px;
+    overflow: visible;
+    white-space: nowrap;
+    padding: 0 0.5em;
+}
+
 
