--- a/SDZ_custom/user4.css
+++ b/SDZ_custom/user4.css
@@ -153,3 +153,25 @@ button.svelte-1g805jl {
 }
 
 
+.extra-network-cards .card {
+    display: inline-table;
+    margin: 0.5em;
+    width: 6em;
+    height: 10em;
+    box-shadow: 0 0 5px rgba(128, 128, 128, 0.5);
+    border-radius: 0.2em;
+    position: relative;
+    background-size: auto 100%;
+    background-position: center;
+    overflow: hidden;
+    cursor: pointer;
+    background-image: url('https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/icon/card-no-preview.jpg');
+}
+
+
+.extra-network-cards .card .actions .name {
+    font-size: 1em;
+    font-weight: normal;
+    line-break: anywhere;
+}
+
