--- a/SDZ_custom/user4.css
+++ b/SDZ_custom/user4.css
@@ -5,27 +5,27 @@
 	--background-fill-secondary: #2a2a2a;
 	--border-color-accent: #6c6c6c;
 	--border-color-primary: #2e2e2e;
-	--slider-color: #00ffcc;
+	--slider-color: #00f4f4;
 	--input-background-fill: #2e2e2e;
-	--input-border-color-focus: #00ffcc;
+	--input-border-color-focus: #00f4f4;
 	--checkbox-label-background-fill: linear-gradient(to top, #2e2e2e, #2e2e2e);
 	--checkbox-label-background-fill-hover: linear-gradient(to top, #323232, #323232);
-	--button-primary-background-fill: linear-gradient(to bottom right, #00ffcc, #00ffcc);
+	--button-primary-background-fill: linear-gradient(to bottom right, #00f4f4, #00f4f4);
 	--button-primary-background-fill-hover: linear-gradient(to bottom right, #5a5a5a, #5a5a5a);
-	--button-primary-border-color: #00ffcc;
-	--button-primary-border-color-hover: #00ffcc;
+	--button-primary-border-color: #00f4f4;
+	--button-primary-border-color-hover: #00f4f4;
 	--loader-color: var(--color-accent);
-	--checkbox-border-color-selected: #00ffcc;
+	--checkbox-border-color-selected: #00f4f4;
 	--checkbox-background-color-focus: #2a2a2a;
-	--checkbox-background-color-selected: #00ffcc;
+	--checkbox-background-color-selected: #00f4f4;
 	--radio-circle: url(
   "data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='black' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
 	--checkbox-check: url(
   "data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='black' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
 	--button-secondary-background-fill: linear-gradient(to bottom right, #404040, #404040);
-	--button-secondary-background-fill-hover: linear-gradient(to bottom right, #00ffcc, #00ffcc);
+	--button-secondary-background-fill-hover: linear-gradient(to bottom right, #00f4f4, #00f4f4);
 	--button-secondary-border-color: #2a2a2a;
-	--block-label-text-color: #00ffcc;
+	--block-label-text-color: #00f4f4;
 	
 
 
@@ -140,7 +140,7 @@ button.svelte-1g805jl {
 .progressDiv .progress {
     width: 0%;
     height: 20px;
-    background: #00ffcc;
+    background: #00f4f4;
     color: #2a2a2a;
     font-weight: bold;
     line-height: 20px;
