--- a/SDZ_custom/SDZ_user.css
+++ b/SDZ_custom/SDZ_user.css
@@ -73,6 +73,14 @@
 }
 
 
+.grid-container.svelte-g4rw9.svelte-g4rw9 {
+    /* display: grid; */
+    grid-template-rows: var(--grid-rows);
+    grid-template-columns: var(--grid-cols);
+    gap: var(--spacing-lg);
+}
+
+
 
 div.svelte-19hvt5v {
     display: flex;
