--- a/SDZ_custom/SDZ_user.css
+++ b/SDZ_custom/SDZ_user.css
@@ -1,4 +1,9 @@
 .dark {
+  background-color: #0d1117;
+  color-scheme: dark;
+}
+
+.dark {
 
 	--body-background-fill: #383838;
 	--background-fill-primary: #2a2a2a;
