--- a/SDZ_custom/SDZ_user.css
+++ b/SDZ_custom/SDZ_user.css
@@ -217,3 +217,25 @@ div.gradio-container {
     max-width: unset !important;
 }
 
+
+
+
+
+
+
+
+.block.gradio-html.svelte-90oupt.padded.hide-container {
+  background-color: #383838;
+}
+
+.svelte-vt1mxs.gap {
+  background-color: #383838;
+}
+
+.dark.physton-gradio-container {
+  background-color: #383838;
+}
+
+
+
+
