--- a/SDZ_custom/SDZ_user.css
+++ b/SDZ_custom/SDZ_user.css
@@ -265,6 +265,13 @@ div.gradio-container {
   color: #ffffff;
 }
 
+.block.gradio-gallery.svelte-90oupt {
+  height: 800px;
+}
+
+/*svelte-1b19cri height: 800px;*/
+
+
 
 
 
